--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 # If you are only using Pages + D1, you only need the below in your Wrangler config file to interact with D1 locally.
+
 [[d1_databases]]
-binding = "DB" # Should match preview_database_id
-database_name = "D1_DB"
-database_id = "the-id-of-your-D1-database-goes-here" # wrangler d1 info YOUR_DATABASE_NAME
+binding = "DB"
+database_name = "bill-photo"
+database_id = "0015bc15-9740-4004-855b-24249f37b6af"
 preview_database_id = "DB" # Required for Pages local development
