--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,7 @@ compatibility_date = "2025-03-09"
 binding = "DB"
 database_name = "bill-photo"
 database_id = "0015bc15-9740-4004-855b-24249f37b6af"
+
+[[r2_buckets]]
+binding = 'R2'
+bucket_name = 'bill-photo'
