--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/imagesloaded": "^4.1.6",
+		"@types/masonry-layout": "^4.2.8",
+		"imagesloaded": "^5.0.0",
 		"lazysizes": "^5.3.2",
 		"masonry-layout": "^4.2.2",
 		"svelte": "^5.0.0",
