added intrinsic sizes, fixed layout shift on load, added prefetch

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/imagesloaded": "^4.1.6",
 		"@types/masonry-layout": "^4.2.8",
+		"image-size": "^2.0.0",
 		"imagesloaded": "^5.0.0",
 		"lazysizes": "^5.3.2",
 		"masonry-layout": "^4.2.2",
