--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"imagesloaded": "^5.0.0",
 		"lazysizes": "^5.3.2",
 		"masonry-layout": "^4.2.2",
+		"photoswipe": "^5.4.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
