--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250303.0",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.86.4",
 		"@sveltejs/adapter-cloudflare": "^5.0.1",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/imagesloaded": "^4.1.6",
 		"@types/masonry-layout": "^4.2.8",
