--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/imagesloaded": "^4.1.6",
 		"@types/masonry-layout": "^4.2.8",
+		"embla-carousel-autoplay": "^8.5.2",
+		"embla-carousel-svelte": "^8.5.2",
 		"image-size": "^2.0.0",
 		"imagesloaded": "^5.0.0",
 		"lazysizes": "^5.3.2",
