--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
+		"preinstall": "npx only-allow pnpm",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -12,26 +13,26 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250303.0",
+	"dependencies": {
+		"@cloudflare/workers-types": "^4.20250319.0",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.86.4",
-		"@sveltejs/adapter-cloudflare": "^5.0.1",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/adapter-cloudflare": "^5.1.0",
+		"@sveltejs/kit": "^2.20.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.0.0",
+		"@tailwindcss/vite": "^4.0.14",
 		"@types/imagesloaded": "^4.1.6",
 		"@types/masonry-layout": "^4.2.8",
-		"image-size": "^2.0.0",
+		"image-size": "^2.0.1",
 		"imagesloaded": "^5.0.0",
 		"lazysizes": "^5.3.2",
 		"masonry-layout": "^4.2.2",
 		"photoswipe": "^5.4.4",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
+		"svelte": "^5.23.2",
+		"svelte-check": "^4.1.5",
+		"tailwindcss": "^4.0.14",
+		"typescript": "^5.8.2",
+		"vite": "^6.2.2"
 	}
 }
