--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"photoswipe": "^5.4.4",
 		"svelte": "^5.23.2",
 		"svelte-check": "^4.1.5",
+		"swiper": "^11.2.6",
 		"tailwindcss": "^4.0.14",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.2"
